Fix: First photo visible on locked album Fix: Js issues on disabled  mainpage

--- a/css/main.css
+++ b/css/main.css
@@ -53,3 +53,6 @@ footer{
     /* inline-block space fix */
     margin-right:-4px;
 }
+.glyphicon-password-image{
+    font-size: 5em;
+}
